--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 node_modules
 /test/*.d.ts
 /test/*.js
+### git template
+.idea
+
+~ci.list.txt
+~ci.log.txt
+~ci.errors.txt
+
+*.stackdump
+*.bak
+*.old
+
+package-lock.json
+
+test/**/*.js
+test/**/*.d.ts
+test/*.js
+test/*.d.ts
+test/temp
