--- a/.npmignore
+++ b/.npmignore
@@ -2,3 +2,23 @@
 /test/
 /.idea/
 /docs/
+### npm template
+.idea
+
+~ci.list.txt
+~ci.log.txt
+~ci.errors.txt
+
+*.stackdump
+*.bak
+*.old
+
+tsconfig.json
+#package-lock.json
+
+test
+
+.github
+.gitkeep
+
+/.*
