--- a/.npmignore
+++ b/.npmignore
@@ -20,3 +20,28 @@ test
 
 /.*
 /yarn.lock
+/yarn-error.log
+### jsonly template
+*.ts
+!*.d.ts
+### temp template
+/~*
+~ci.list.txt
+~ci.log.txt
+~ci.errors.txt
+
+*.stackdump
+*.bak
+*.old
+
+/*.log
+/*.lock
+
+*.tmp### test template
+*.spec.ts
+*.spec.js
+*.spec.js.map
+*.test.ts
+*.test.js
+*.test.js.map
+/package-lock.json
