--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "array-hyper-unique",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Get unique values of an array. Really, like deeply unique.",
   "keywords": [
     "Array.prototype.unique",
@@ -51,5 +51,14 @@
   "dependencies": {
     "deep-eql": "^3.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@arr/unique": "^1.0.0",
+    "arr-unique": "^1.0.2",
+    "array-uniq": "^2.0.0",
+    "array-unique": "^0.3.2",
+    "array-unique-deep": "^1.0.1",
+    "debug-color2": "^1.0.6",
+    "just-unique": "^3.2.0",
+    "tfk-unique-array": "^1.0.11"
+  }
 }
