--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sort-object-keys2",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Sort an object's keys, including an optional key list",
   "keywords": [
     "arr",
@@ -41,5 +41,7 @@
   "scripts": {
     "test": "npx mocha \"!(node_modules)\\**\\*.+(test|spec).ts\""
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@bluelovers/tsconfig": "^1.0.0"
+  }
 }
