--- a/packages/array-chunk-split/package.json
+++ b/packages/array-chunk-split/package.json
@@ -1,6 +1,6 @@
 {
   "name": "array-chunk-split",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Split an array into arrays with max chunk length",
   "homepage": "https://github.com/bluelovers/ws-array#readme",
   "bugs": {
@@ -24,11 +24,12 @@
     "prepublishOnly": "yarn run ncu && yarn run sort-package-json && yarn run test",
     "postpublish": "echo postpublish",
     "sort-package-json": "npx sort-package-json ./package.json",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha --require ts-node/register test/**/*.{test,spec}.{ts,tsx}",
     "tsc:default": "tsc -p tsconfig.json",
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
   "dependencies": {
     "ts-type": "^1.2.9"
-  }
+  },
+  "gitHead": "c3147ddf55344948214c4a2cd58a15bac7075a76"
 }
