--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,3 @@
 {
-  "compilerOptions": {
-    "module": "CommonJS",
-    "target": "es2018",
-
-    "moduleResolution": "node",
-    "allowJs": false,
-
-    //"sourceMap": true,
-    //"inlineSourceMap": true,
-    //"inlineSources": true,
-
-    "declaration": true,
-    "experimentalDecorators": true,
-
-//    "allowSyntheticDefaultImports": true,
-
-    "strict": false,
-
-    //"forceConsistentCasingInFileNames": true,
-
-    "locale": "zh-TW",
-    "pretty": true,
-
-    //"lib": ["es2015", "es2017", "es2018", "dom"],
-
-    "removeComments": false,
-
-//    "baseUrl": ".",
-//    "sourceRoot": ".",
-//    "rootDir": ".",
-//    "outDir": ".",
-
-
-
-    "traceResolution": true,
-    "newLine": "lf"
-  },
-
-  "exclude": [
-    "node_modules"
-  ]
+  "extends": "@bluelovers/tsconfig/sourcemap/mapfile.json"
 }
