--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "array-hyper-unique",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Get unique values of an array. Really, like deeply unique.",
   "keywords": [
     "Array.prototype.unique",
@@ -51,7 +51,7 @@
     "lint": "npx eslint **/*.ts",
     "ncu": "npx yarn-tool ncu -u",
     "npm:publish": "npm publish",
-    "prepublishOnly": "yarn run ncu && yarn run sort-package-json && yarn run test && ysrn run build:lib:chk",
+    "prepublishOnly": "yarn run ncu && yarn run sort-package-json && yarn run test && yarn run build:lib:chk",
     "postpublish": "echo postpublish & git commit -m \"publish new version\" .",
     "sort-package-json": "npx sort-package-json ./package.json",
     "test": "npx -r chai -r mocha -r ts-node mocha --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
@@ -59,17 +59,17 @@
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
   "dependencies": {
-    "deep-eql": "^3.0.1"
+    "deep-eql": "^4.0.0"
   },
   "devDependencies": {
     "@arr/unique": "^1.0.0",
     "@bluelovers/tsconfig": "^1.0.12",
     "@types/node": "^12.6.8",
     "arr-unique": "^1.0.2",
-    "array-uniq": "^2.0.0",
+    "array-uniq": "^2.1.0",
     "array-unique": "^0.3.2",
     "array-unique-deep": "^1.0.1",
-    "debug-color2": "^1.0.6",
+    "debug-color2": "^1.1.6",
     "just-unique": "^3.2.0",
     "lodash.uniq": "^4.5.0",
     "strip-ansi": "^5.2.0",
