--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sort-object-keys2",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Sort an object's keys, including an optional key list",
   "keywords": [
     "arr",
@@ -39,9 +39,24 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npx mocha \"!(node_modules)\\**\\*.+(test|spec).ts\""
+    "coverage": "npx nyc yarn run test",
+    "lint": "npx eslint **/*.ts",
+    "ncu": "npx yarn-tool ncu -u",
+    "npm:publish": "npm publish",
+    "postpublish_": "git commit -m \"chore(release): publish\" .",
+    "prepublish:lockfile": "npx sync-lockfile .",
+    "prepublishOnly": "yarn run ncu && yarn run sort-package-json && npx yarn-tool install && yarn run test",
+    "sort-package-json": "npx yarn-tool sort",
+    "test": "jest",
+    "test:mocha": "npx mocha --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "tsc:default": "tsc -p tsconfig.json",
+    "tsc:esm": "tsc -p tsconfig.esm.json"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@bluelovers/tsconfig": "^1.0.0"
+    "@bluelovers/tsconfig": "^1.0.19",
+    "@types/jest": "^25.2.1",
+    "jest": "^25.2.7",
+    "ts-jest": "^25.3.1"
   }
 }
