--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sort-object-keys2",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Sort an object's keys, including an optional key list",
   "keywords": [
     "arr",
@@ -39,19 +39,19 @@
     "test": "test"
   },
   "scripts": {
-    "ncu": "npx yarn-tool ncu -u",
+    "test": "jest --coverage",
     "npm:publish": "npm publish",
-    "postpublish": "git commit -m \"chore(release): publish\" .",
     "prepublish:lockfile": "npx sync-lockfile .",
     "prepublishOnly": "yarn run ncu && yarn run sort-package-json && npx yarn-tool install && yarn run test",
-    "sort-package-json": "npx yarn-tool sort",
-    "test": "jest --coverage"
+    "postpublish": "git commit -m \"chore(release): publish\" .",
+    "ncu": "npx yarn-tool ncu -u",
+    "sort-package-json": "npx yarn-tool sort"
   },
   "dependencies": {},
   "devDependencies": {
     "@bluelovers/tsconfig": "^1.0.19",
     "@types/jest": "^25.2.1",
-    "jest": "^25.2.7",
-    "ts-jest": "^25.3.1"
+    "jest": "^26.0.1",
+    "ts-jest": "^25.5.1"
   }
 }
