--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "npm:publish:lerna": "npx lerna publish --yes --cd-version patch",
     "prepublish:lockfile": "npx sync-lockfile .",
     "prepublishOnly": "yarn run test && yarn run build:lib:chk",
-    "postpublish": "git commit -m \"chore(release): publish\" .",
+    "postpublish": "git commit -m \"chore(release): publish\" . && git push",
     "ncu": "npx yarn-tool ncu -u",
     "sort-package-json": "npx yarn-tool sort",
     "tsc:default": "tsc -p tsconfig.json",
