--- a/packages/string-natural-compare/package.json
+++ b/packages/string-natural-compare/package.json
@@ -29,7 +29,7 @@
     "tsc:default": "tsc -p tsconfig.json",
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
-  "devDependencies": {
+  "dependencies": {
     "string-natural-compare": "^3.0.1"
   },
   "publishConfig": {
