--- a/packages/array-hyper-unique/package.json
+++ b/packages/array-hyper-unique/package.json
@@ -31,46 +31,40 @@
     "utility",
     "utils"
   ],
-  "homepage": "https://github.com/bluelovers/array-hyper-unique#readme",
+  "homepage": "https://github.com/bluelovers/ws-array/tree/master/packages/array-hyper-unique#readme",
   "bugs": {
-    "url": "https://github.com/bluelovers/array-hyper-unique/issues"
+    "url": "https://github.com/bluelovers/ws-array/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluelovers/array-hyper-unique.git"
+    "url": "git+https://github.com/bluelovers/ws-array.git"
   },
   "license": "ISC",
   "author": "bluelovers",
   "main": "index.js",
   "directories": {
+    "lib": "lib",
     "test": "test"
   },
   "scripts": {
-    "coverage": "npx nyc yarn run test",
-    "lint": "npx eslint **/*.ts",
     "test": "jest",
     "build:lib:chk": "ts-node test/lib.chk",
-    "npm:publish": "npm publish",
-    "npm:publish:lerna": "npx lerna publish --yes --cd-version patch",
-    "prepublish:lockfile": "npx sync-lockfile .",
     "prepublishOnly": "yarn run test && yarn run build:lib:chk",
-    "postpublish": "git commit -m \"chore(release): publish\" . && git push",
-    "ncu": "npx yarn-tool ncu -u",
-    "sort-package-json": "npx yarn-tool sort",
-    "tsc:default": "tsc -p tsconfig.json",
-    "tsc:esm": "tsc -p tsconfig.esm.json"
+    "prepublishOnly:check-bin": "ynpx --quiet @yarn-tool/check-pkg-bin",
+    "prepublishOnly:update": "yarn run ncu && yarn run sort-package-json",
+    "prepublishOnly_": "yarn run prepublishOnly:check-bin && yarn run test",
+    "ncu": "ynpx --quiet yarn-tool -- ncu -u",
+    "sort-package-json": "ynpx --quiet yarn-tool -- sort"
   },
   "dependencies": {
     "deep-eql": "^4.0.0"
   },
   "devDependencies": {
     "@arr/unique": "^1.0.1",
-    "@bluelovers/tsconfig": "^1.0.19",
     "@types/array-unique": "^0.3.0",
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.155",
     "@types/lodash.uniq": "^4.5.6",
-    "@types/node": "^14.0.11",
     "arr-unique": "^1.0.2",
     "array-uniq": "^2.1.0",
     "array-unique": "^0.3.2",
