--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
     "sort-package-json": "npx yarn-tool sort && npx yarn-tool ws exec yarn-tool sort"
   },
   "resolutions": {},
+  "dependencies": {
+    "debug-color2": "^1.2.3",
+    "deep-eql": "^4.0.0",
+    "strip-ansi": "^6.0.0"
+  },
   "devDependencies": {
     "@bluelovers/tsconfig": "^1.0.19",
-    "@types/jest": "^25.2.3",
+    "@types/array-unique": "^0.3.0",
+    "@types/jest": "^26.0.0",
+    "@types/lodash": "^4.14.155",
+    "@types/lodash.uniq": "^4.5.6",
     "@types/node": "*",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0"
   },
   "peerDependencies": {
-    "lerna": "^3.22.0"
+    "lerna": "^3.22.1"
   }
 }
