--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "yt ws run test",
     "lerna:publish": "npx lerna publish",
     "lerna:publish:yes": "npx lerna publish --yes --cd-version patch",
     "ncu": "npx yarn-tool ncu -u && npx yarn-tool ws exec yarn-tool ncu -- -u",
@@ -16,19 +16,20 @@
   "dependencies": {
     "debug-color2": "^1.2.3",
     "deep-eql": "^4.0.0",
-    "strip-ansi": "^6.0.0"
+    "strip-ansi": "<7 >=6",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@bluelovers/tsconfig": "^1.0.19",
+    "@bluelovers/tsconfig": "^1.0.24",
     "@types/array-unique": "^0.3.0",
-    "@types/jest": "^26.0.3",
-    "@types/lodash": "^4.14.157",
+    "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.171",
     "@types/lodash.uniq": "^4.5.6",
     "@types/node": "*",
-    "jest": "^26.1.0",
-    "ts-jest": "^26.1.1"
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3"
   },
   "peerDependencies": {
-    "lerna": "^3.22.1"
+    "lerna": "^4.0.0"
   }
 }
