--- a/packages/array-chunk-split/package.json
+++ b/packages/array-chunk-split/package.json
@@ -34,7 +34,8 @@
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
   "dependencies": {
-    "ts-type": "^1.2.23"
+    "ts-type": "^1.2.35",
+    "tslib": "^2.3.0"
   },
   "gitHead": "5a3a54df2dcd37f351814f220f4f17c7ffa23e44"
 }
