--- a/packages/array-chunk-split/package.json
+++ b/packages/array-chunk-split/package.json
@@ -1,6 +1,6 @@
 {
   "name": "array-chunk-split",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "Split an array into arrays with max chunk length",
   "keywords": [],
   "homepage": "https://github.com/bluelovers/ws-array#readme",
@@ -13,29 +13,39 @@
   },
   "license": "ISC",
   "author": "bluelovers",
-  "main": "index.js",
   "directories": {
     "test": "test"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "coverage": "npx nyc yarn run test",
-    "lint": "npx eslint **/*.ts",
-    "test": "yarn run test:jest",
-    "test:jest": "jest --coverage",
-    "npm:publish": "npm publish",
-    "npm:publish:lerna": "npx lerna publish --yes --cd-version patch",
-    "prepublish:lockfile": "npx sync-lockfile .",
-    "prepublishOnly": "yarn run test",
+    "coverage": "yarn run test -- --coverage",
+    "lint": "ynpx --quiet eslint -- **/*.ts",
+    "test": "jest --passWithNoTests",
+    "test:jest": "jest --passWithNoTests",
+    "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "posttest": "yarn run build",
+    "build": "yarn run build:tsdx && yarn run build:dts",
+    "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type --export-referenced-types false & echo build:dts",
+    "build:tsdx": "tsdx build --target node --name index",
+    "preversion": "echo preversion && yarn run test",
+    "version": "echo version",
+    "postversion": "echo postversion",
+    "prepublish": "echo prepublish",
+    "prepublishOnly": "echo prepublishOnly",
+    "prepublishOnly:update": "yarn run ncu && yarn run sort-package-json",
+    "publish": "echo publish",
     "postpublish": "echo postpublish",
-    "postpublish_": "git commit -m \"chore(release): publish\" .",
-    "ncu": "npx yarn-tool ncu -u",
-    "sort-package-json": "npx yarn-tool sort",
-    "tsc:default": "tsc -p tsconfig.json",
-    "tsc:esm": "tsc -p tsconfig.esm.json"
+    "postpublishOnly": "echo postpublishOnly",
+    "ncu": "yarn-tool ncu -u",
+    "sort-package-json": "yarn-tool sort",
+    "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "dependencies": {
-    "ts-type": "^1.2.35",
-    "tslib": "^2.3.0"
+    "ts-type": "^2.0.1",
+    "tslib": "^2.3.1"
   },
   "gitHead": "5a3a54df2dcd37f351814f220f4f17c7ffa23e44"
 }
