--- a/packages/array-hyper-unique/package.json
+++ b/packages/array-hyper-unique/package.json
@@ -57,7 +57,7 @@
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
     "posttest": "yarn run build",
     "build": "yarn run build:tsdx && yarn run build:dts",
-    "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type --export-referenced-types false & echo build:dts",
+    "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type & echo build:dts",
     "build:tsdx": "tsdx build --target node --name index",
     "preversion": "echo preversion && yarn run test",
     "version": "echo version",
