--- a/packages/distribute-group-to-array/package.json
+++ b/packages/distribute-group-to-array/package.json
@@ -2,6 +2,10 @@
   "name": "distribute-group-to-array",
   "version": "1.0.3",
   "description": "",
+  "keywords": [
+    "create-by-yarn-tool",
+    "create-by-tsdx"
+  ],
   "homepage": "https://github.com/bluelovers/ws-array/tree/master/packages/distribute-group-to-array#readme",
   "bugs": {
     "url": "https://github.com/bluelovers/ws-array/issues"
@@ -12,10 +16,20 @@
   },
   "license": "ISC",
   "author": "bluelovers",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "dist/index.cjs",
+  "module": "dist/index.esm.mjs",
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "coverage": "yarn run test -- --coverage",
     "lint": "ynpx --quiet eslint -- **/*.ts",
