--- a/packages/array-hyper-unique/.gitignore
+++ b/packages/array-hyper-unique/.gitignore
@@ -121,6 +121,12 @@ bin/**/*.d.cts
 /packages/*/tests/*.d.cts
 /packages/*/tests/temp*
 
+/src/**/*.d.ts
+/src/**/*.js
+/src/**/*.d.cts
+/src/**/*.d.mts
+/src/**/*.cjs
+/src/**/*.mjs
 
 **/node_modules
 *.tgz
@@ -192,8 +198,8 @@ jest.config.js.map
 !npm-shrinkwrap.json
 *.stat
 .vercel
-/test/tsconfig.json.tpl
-/tsconfig.json.tpl
+/test/*.tpl
+/*.tpl
 /report.json
 
 .opt-in
@@ -206,3 +212,4 @@ jest.config.js.map
 /_*/
 _snowpack
 web_modules
+tsc-multi.json.tpl
