--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,12 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "packages/@lazy-array/*"
   ],
   "command": {
     "publish": {
+      "concurrency": 1,
+      "loglevel": "silly",
       "ignoreChanges": [
         "**/node_modules/**",
         "**/__snapshots__/**",
@@ -22,17 +25,26 @@
       ],
       "message": "chore(release): publish",
       "bump": "patch",
+      "noPrivate": true,
       "conventionalCommits": true,
       "conventionalGraduate": false
     },
     "version": {
+      "concurrency": 1,
+      "noPrivate": true,
       "conventionalCommits": true,
       "changelogPreset": "@bluelovers/conventional-changelog-bluelovers"
     },
     "run": {
+      "concurrency": 1,
       "stream": true
     },
     "exec": {
+      "concurrency": 1,
+      "stream": true
+    },
+    "add": {
+      "concurrency": 1,
       "stream": true
     }
   },
