--- a/packages/array-chunk-split/package.json
+++ b/packages/array-chunk-split/package.json
@@ -6,13 +6,14 @@
     "create-by-yarn-tool",
     "create-by-tsdx"
   ],
-  "homepage": "https://github.com/bluelovers/ws-array#readme",
+  "homepage": "https://github.com/bluelovers/ws-array/tree/master/packages/array-chunk-split#readme",
   "bugs": {
     "url": "https://github.com/bluelovers/ws-array/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluelovers/ws-array.git"
+    "url": "git+https://github.com/bluelovers/ws-array.git",
+    "directory": "packages/array-chunk-split"
   },
   "license": "ISC",
   "author": "bluelovers",
@@ -40,7 +41,9 @@
     "pretest": "echo pretest",
     "test": "jest --passWithNoTests",
     "test:jest": "jest --passWithNoTests",
+    "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "test:snapshot": "yarn run test -- -u",
     "posttest": "yarn run build",
     "build": "yarn run build:tsdx && yarn run build:dts",
     "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type & echo build:dts",
