--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   ],
   "scripts": {
     "review:all": "yarn-tool ws run review --concurrency 1",
+    "review:since": "yarn run review:all -- --since",
     "coverage:all": "yarn-tool ws run coverage --concurrency 1",
+    "coverage:since": "yarn run coverage:all -- --since",
     "lint:all": "yarn-tool ws run lint --concurrency 1",
+    "lint:since": "yarn run lint:all -- --since",
     "pretest": "echo pretest",
     "test": "yarn run test:since",
     "test:all": "yarn-tool ws run test --concurrency 1",
@@ -25,10 +28,13 @@
     "test:since": "yarn run test:all -- --since",
     "test:snapshot:all": "yarn-tool ws run test:snapshot --concurrency 1",
     "test:snapshot:since": "yarn run test:snapshot:all -- --since",
+    "test:tsd:all": "yarn-tool ws run test:tsd --concurrency 1",
+    "test:tsd:since": "yarn run test:tsd:all -- --since",
     "install:frozenLockfile": "yarn-tool install --frozen-lockfile",
     "install:reset-lockfile": "yarn-tool install --reset-lockfile",
     "install:resetLockfile": "yarn-tool install --reset-lockfile",
     "build:all": "yarn-tool ws run build --concurrency 1",
+    "build:since": "yarn run build:all -- --since",
     "ci:install": "yarn install --frozen-lockfile && yarn add -W typescript@next jest ts-jest ts-node ynpx lerna yarn-tool",
     "ci:build": "echo ci:build",
     "lerna:publish": "yarn run prepublishOnly:root && lerna publish && yarn run postpublishOnly",
@@ -62,9 +68,17 @@
   },
   "resolutions": {},
   "dependencies": {
+    "@arr/unique": "^1.0.1",
+    "arr-unique": "^1.0.2",
+    "array-uniq": "<3 >=2.1",
+    "array-unique": "^0.3.2",
+    "array-unique-deep": "^1.0.1",
     "debug-color2": "^1.3.2",
     "deep-eql": "= 4.0.0",
+    "just-unique": "^4.1.1",
+    "lodash.uniq": "^4.5.0",
     "strip-ansi": "<7 >=6",
+    "tfk-unique-array": "^2.0.0",
     "tslib": "^2"
   },
   "devDependencies": {
