--- a/packages/array-chunk-split/package.json
+++ b/packages/array-chunk-split/package.json
@@ -44,6 +44,7 @@
     "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
     "test:snapshot": "yarn run test -- -u",
+    "test:tsd": "ynpx tsd",
     "posttest": "yarn run build",
     "build": "yarn run build:tsdx && yarn run build:dts",
     "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type & echo build:dts",
@@ -72,8 +73,7 @@
     "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "dependencies": {
-    "ts-type": "^2.1.6",
-    "tslib": "^2"
+    "ts-type": "^2.1.10"
   },
   "packageManager": "yarn@^1.22.11",
   "gitHead": "5a3a54df2dcd37f351814f220f4f17c7ffa23e44"
