--- a/packages/array-hyper-unique/package.json
+++ b/packages/array-hyper-unique/package.json
@@ -77,6 +77,7 @@
     "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
     "test:snapshot": "yarn run test -- -u",
+    "test:tsd": "ynpx tsd",
     "posttest": "yarn run build",
     "build": "yarn run build:tsdx && yarn run build:dts",
     "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type & echo build:dts",
@@ -106,18 +107,7 @@
   },
   "dependencies": {
     "deep-eql": "= 4.0.0",
-    "lodash": "^4.17.21",
-    "tslib": "^2"
-  },
-  "devDependencies": {
-    "@arr/unique": "^1.0.1",
-    "arr-unique": "^1.0.2",
-    "array-uniq": "<3 >=2.1",
-    "array-unique": "^0.3.2",
-    "array-unique-deep": "^1.0.1",
-    "just-unique": "^4.0.1",
-    "lodash.uniq": "^4.5.0",
-    "tfk-unique-array": "^2.0.0"
+    "lodash": "^4.17.21"
   },
   "packageManager": "yarn@^1.22.11",
   "gitHead": "5a3a54df2dcd37f351814f220f4f17c7ffa23e44"
