--- a/packages/string-natural-compare/package.json
+++ b/packages/string-natural-compare/package.json
@@ -40,6 +40,7 @@
     "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
     "test:snapshot": "yarn run test -- -u",
+    "test:tsd": "ynpx tsd",
     "posttest": "yarn run build",
     "build": "yarn run build:tsdx && yarn run build:dts",
     "build:dts": "ynpx dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-banner --external-inlines ts-type & echo build:dts",
@@ -58,8 +59,7 @@
     "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "dependencies": {
-    "string-natural-compare": "^3.0.1",
-    "tslib": "^2"
+    "string-natural-compare": "^3.0.1"
   },
   "packageManager": "yarn@^1.22.11",
   "publishConfig": {
