--- a/packages/sort-object-keys/tsconfig.json
+++ b/packages/sort-object-keys/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@bluelovers/tsconfig/tsdx/index.json",
   "compilerOptions": {
     "importHelpers": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "noPropertyAccessFromIndexSignature": false
   }
 }
