--- a/packages/@lazy-array/util-unique/tsconfig.json
+++ b/packages/@lazy-array/util-unique/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@bluelovers/tsconfig/tsdx/index.json",
   "compilerOptions": {
-    "importHelpers": true,
-  }
+    "importHelpers": true
+  },
+  "include": [
+    "src/index.ts"
+  ]
 }
